# pandas_ods_reader

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE.txt  MANIFEST.in  README.md  TODO.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.ipynb
.github/: dependabot.yml
.github/workflows/: lint_and_test.yml
pandas_ods_reader/: __init__.py  algo.py  main.py  parser.py  read_ods.py  tools.py  utils.py
pandas_ods_reader/parsers/: fods.py  ods.py
pandas_ods_reader/tests/: example_no_headers.ods  test_read_ods.py
pandas_ods_reader/tests/rsc/: example_duplicated_column_names.ods  example_headers.ods  mixed_dtypes.ods
tests/: test_read_ods.py
tests/rsc/: example_col_lengths.fods  example_col_lengths.ods  example_duplicated_column_names.fods  example_headers.fods  example_missing_header.fods  example_missing_header.ods  example_no_headers.fods  example_skiprows.fods  example_skiprows.ods  mixed_dtypes.fods
