[tool.poetry]
name = "pandas-ods-reader"
version = "0.1.3"
description = "Read in .ods and .fods files and return a pandas.DataFrame."
authors = ["iuvbio <iuvbio@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/iuvbio/pandas_ods_reader"
keywords = [ "data", "io", "pandas", "ods" ]
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.7"
ezodf = "^0.3.2"
lxml = "^4.6.3"
pandas = "^1.0.0"
importlib_metadata = { version = "^4.8.1", python = ">=3.7,<3.8" }

[tool.poetry.group.dev.dependencies]
black = "^21.9-beta.0"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
