[metadata]
name = pandas_ods_reader
version = file: pandas_ods_reader/VERSION
description = Read in an ODS file and return it as a pandas.DataFrame
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
classifiers = 
    Development Status :: 2 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Utilities
keywords = data, io, pandas, ods
url = "http://github.com/iuvbio/pandas_ods_reader"
author = iuvbio
author_email = cryptodemigod@protonmail.com
license = MIT

[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires =
    ezodf
    pandas
    lxml

[options.extras_require]
test = pytest

[aliases]
test = pytest
